feat: add friends and share expenses
